test-suite/tests/ui/states/invalid/redundant_declare.stderr
error: state is already declared
 --> tests/ui/states/invalid/redundant_declare.rs:3:20
  |
3 | #[stated(states(A, A))]
  |                    ^
...
6 | #[stated]
  | --------- in this attribute macro expansion
  |
  = note: this error originates in the macro `Test` which comes from the expansion of the attribute macro `stated` (in Nightly builds, run with -Z macro-backtrace for more info)
